Made final changes, added comments and completed the readme file.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/style.css">
+    <!-- Updated the website title to something more descriptive and concise -->
     <title>Horiseon Marketing</title>
 </head>
 
 <body>
+    <!-- Switched out div elements throughout the document for semantic 
+        HTML elements such as header, nav, section and footer -->
     <section class="header">
         <h1>Hori<header class="seo">seo</header>n</h1>
         <nav>
@@ -26,7 +29,10 @@
     </section>
     <section class="hero"></section>
     <section class="content">
-        <section class="search-engine-optimization">
+        <!-- Added ALT attributes to all images in HTML -->
+        <!-- Added an id to search-engine-optimization in order for the navigation bar to 
+        direct to this section in the website -->
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="notebook with a word bubble titled SEO" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -72,6 +78,7 @@
         </section>
     </section>
     <footer class="footer">
+        <!-- changed h2 to h4 in order to maintain sequential order throughout file  -->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
